@@ -22,6 +22,7 @@
 - Add support for the extended format in Action1.
 - Add `main` function to handle command line arguments.
 - Remove `Mask` offset, add `FileMask` absolute positioning.
+
 - lib: Fix `CallbackManager.make_switches` for non-vehicle features.
 - lib: `CallbackManager` rewrite:
 	- Support all features (non-vehicles may still be incomplete).
@@ -32,6 +33,8 @@
 - lib: Add `EngineOverride` sprite generator.
 - lib: Set correct flags and track_type on auto-articulated parts.
 - lib: Fix unicode vehicle names.
+
+- grftopy: Fix missing sprite zoom
 
 ---------
 0.2.2
